--- a/www/config.php.sample
+++ b/www/config.php.sample
@@ -1,4 +1,4 @@
 <?php
-$TWILIO_ACCOUNT_SID = 'CHANGE_ME';
-$TWILIO_AUTH_TOKEN  = 'CHANGE_ME';
-$TWILIO_NUMBER = 'CHANGE_ME';
+$TWILIO_ACCOUNT_SID = 'AC804efcc24d128b6704fc2c3770abffbc';
+$TWILIO_AUTH_TOKEN  = 'cbb5945a1aff38dd4e73cd0e49609058';
+$TWILIO_NUMBER = '18019004575';
